provision-k8s/bases/kafka/connect-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-cluster-connect-ui
  annotations:
    linkerd.io/inject: "enabled"

spec:
  selector:
    matchLabels:
      app: tracing-cluster-connect-ui
  template:
    metadata:
      labels:
        app: tracing-cluster-connect-ui
    spec:
      containers:
        - name: kafka-connect-ui
          image: landoop/kafka-connect-ui
          ports:
            - name: http-kc
              containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
