provision-k8s/bases/kafka/connect-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tracing-cluster-connect-ui
spec:
  type: ClusterIP
  selector:
    app: tracing-cluster-connect-ui
  ports:
    - name: http
      protocol: "TCP"
      port: 8000
      targetPort: 8000
