provision-k8s/bases/kafka/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka
spec:
  hosts:
  - "*"
  gateways:
  - tracegrapher-gateway
  http:
  - match:
    - uri:
        prefix: /kafka-connect
    rewrite:
      uri: /
    route:
    - destination:
        host: tracing-cluster-connect-ui
        port:
          number: 8000
  - match:
    - uri:
        regex: /api/kafka-connect-([0-9]+)(/.*)
    route:
    - destination:
        host: tracing-cluster-connect-ui
        port:
          number: 8000
